scripts/resources/raw/yaml/kafdrop/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: service-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /kafdrop/
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kafdrop
  namespace: kafdrop
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`*`) && PathPrefix(`/kafdrop`)
      kind: Rule
      services:
        - name: kafka-kafdrop
          port: 9000
          namespace: kafdrop
---
